// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<License /> It renders commercial license 1`] = `
<Fragment>
  <h2>
    License
  </h2>
  <div>
    <strong>
      <Icon
        name="exclamation-triangle"
        spaceBefore={true}
      />
      Available for use with a commercial agreement from
       
      Oracle
      .
    </strong>
  </div>
</Fragment>
`;

exports[`<License /> It renders commercial license with description 1`] = `
<Fragment>
  <h2>
    License
  </h2>
  <div>
    <strong>
      <Icon
        name="exclamation-triangle"
        spaceBefore={true}
      />
      Available for use with a commercial agreement from
       
      Oracle
      .
    </strong>
    <ReactMarkdown
      astPlugins={Array []}
      escapeHtml={true}
      plugins={Array []}
      rawSourcePos={false}
      renderers={Object {}}
      skipHtml={false}
      source="License text."
      sourcePos={false}
      transformLinkUri={[Function]}
    />
  </div>
</Fragment>
`;

exports[`<License /> It renders dual license 1`] = `
<Fragment>
  <h2>
    License
  </h2>
  <div>
    <strong>
      <Icon
        name="check"
        spaceBefore={true}
      />
      Available for use under an open-source license.
    </strong>
    <p>
      The MIT License
    </p>
  </div>
  <div>
    <strong>
      <Icon
        name="exclamation-triangle"
        spaceBefore={true}
      />
      Available for use with a commercial agreement from
       
      Oracle
      .
    </strong>
  </div>
</Fragment>
`;

exports[`<License /> It renders nothing for missing license 1`] = `""`;

exports[`<License /> It renders open-source license 1`] = `
<Fragment>
  <h2>
    License
  </h2>
  <div>
    <strong>
      <Icon
        name="check"
        spaceBefore={true}
      />
      Available for use under an open-source license.
    </strong>
    <p>
      The MIT License
    </p>
  </div>
</Fragment>
`;

exports[`<License /> It renders open-source license with description 1`] = `
<Fragment>
  <h2>
    License
  </h2>
  <div>
    <strong>
      <Icon
        name="check"
        spaceBefore={true}
      />
      Available for use under an open-source license.
    </strong>
    <p>
      The MIT License
    </p>
    <ReactMarkdown
      astPlugins={Array []}
      escapeHtml={true}
      plugins={Array []}
      rawSourcePos={false}
      renderers={Object {}}
      skipHtml={false}
      source="OSS Desc"
      sourcePos={false}
      transformLinkUri={[Function]}
    />
  </div>
</Fragment>
`;

exports[`<License /> It renders open-source license with link 1`] = `
<Fragment>
  <h2>
    License
  </h2>
  <div>
    <strong>
      <Icon
        name="check"
        spaceBefore={true}
      />
      Available for use under an open-source license.
    </strong>
    <p>
      <a
        href="https://license.com"
      >
        The MIT License
      </a>
    </p>
  </div>
</Fragment>
`;
